<resources>
    <string name="app_name">Noughts And Crosses</string>
    <string name="un_jugador">1 player</string>
    <string name="dos_jugadores">2 player</string>
    <string name="facil">Easy</string>
    <string name="normal">Normal</string>
    <string name="Imposible">insane</string>
    <string name="casilla">Tile</string>
    <string name="circulos_ganan">Circles WIN</string>
    <string name="aspas_ganan">Crosses Win</string>
    <string name="empate">Tie</string>
    <string name="es_una_casilla">es una casilla</string>
</resources>
